--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "apollo-angular": "^3.0.0-alpha.2",
     "rxjs": "~7.5.2",
     "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@apollo/client": "^3.0.0",
+    "graphql": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.0",
