--- a/package.json
+++ b/package.json
@@ -10,32 +10,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.0",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
-    "@angular/forms": "~13.2.0",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/router": "~13.2.0",
-    "@apollo/client": "^3.0.0",
+    "@angular/animations": "~13.2.2",
+    "@angular/common": "~13.2.2",
+    "@angular/compiler": "~13.2.2",
+    "@angular/core": "~13.2.2",
+    "@angular/forms": "~13.2.2",
+    "@angular/platform-browser": "~13.2.2",
+    "@angular/platform-browser-dynamic": "~13.2.2",
+    "@angular/router": "~13.2.2",
+    "@apollo/client": "^3.5.8",
     "apollo-angular": "^3.0.0-alpha.2",
-    "graphql": "^15.0.0 || ^16.0.0",
-    "rxjs": "~7.5.2",
+    "graphql": "^16.3.0",
+    "rxjs": "~7.5.4",
     "subscriptions-transport-ws": "^0.11.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.0",
-    "@angular/cli": "~13.2.0",
-    "@angular/compiler-cli": "~13.2.0",
+    "@angular-devkit/build-angular": "~13.2.3",
+    "@angular/cli": "~13.2.3",
+    "@angular/compiler-cli": "~13.2.2",
     "@types/jasmine": "~3.10.3",
-    "@types/node": "^17.0.13",
+    "@types/node": "^17.0.17",
     "jasmine-core": "~4.0.0",
-    "karma": "~6.3.12",
+    "karma": "~6.3.15",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
+    "karma-coverage": "~2.2.0",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.5.5"
