--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.2",
-    "@angular/common": "~13.2.2",
-    "@angular/compiler": "~13.2.2",
-    "@angular/core": "~13.2.2",
-    "@angular/forms": "~13.2.2",
-    "@angular/platform-browser": "~13.2.2",
-    "@angular/platform-browser-dynamic": "~13.2.2",
-    "@angular/router": "~13.2.2",
+    "@angular/animations": "~13.2.3",
+    "@angular/common": "~13.2.3",
+    "@angular/compiler": "~13.2.3",
+    "@angular/core": "~13.2.3",
+    "@angular/forms": "~13.2.3",
+    "@angular/platform-browser": "~13.2.3",
+    "@angular/platform-browser-dynamic": "~13.2.3",
+    "@angular/router": "~13.2.3",
     "@apollo/client": "^3.5.9",
-    "apollo-angular": "^3.0.0-alpha.2",
+    "@taquito/michelson-encoder": "^11.2.0",
+    "apollo-angular": "^3.0.0",
     "graphql": "^16.3.0",
     "rxjs": "~7.5.4",
+    "stream-browserify": "^3.0.0",
     "subscriptions-transport-ws": "^0.11.0",
     "tslib": "^2.3.1",
     "zone.js": "~0.11.4"
@@ -29,7 +31,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.3",
     "@angular/cli": "~13.2.3",
-    "@angular/compiler-cli": "~13.2.2",
+    "@angular/compiler-cli": "~13.2.3",
     "@types/jasmine": "~3.10.3",
     "@types/node": "^17.0.18",
     "jasmine-core": "~4.0.0",
