--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.5",
-    "@angular/common": "~13.2.5",
-    "@angular/compiler": "~13.2.5",
-    "@angular/core": "~13.2.5",
-    "@angular/forms": "~13.2.5",
-    "@angular/platform-browser": "~13.2.5",
-    "@angular/platform-browser-dynamic": "~13.2.5",
-    "@angular/router": "~13.2.5",
+    "@angular/animations": "~13.2.6",
+    "@angular/cdk": "^13.2.6",
+    "@angular/common": "~13.2.6",
+    "@angular/compiler": "~13.2.6",
+    "@angular/core": "~13.2.6",
+    "@angular/forms": "~13.2.6",
+    "@angular/material": "^13.2.6",
+    "@angular/platform-browser": "~13.2.6",
+    "@angular/platform-browser-dynamic": "~13.2.6",
+    "@angular/router": "~13.2.6",
     "@apollo/client": "^3.5.10",
     "@taquito/michelson-encoder": "^11.2.0",
     "apollo-angular": "^3.0.0",
@@ -29,14 +31,14 @@
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.5",
-    "@angular/cli": "~13.2.5",
-    "@angular/compiler-cli": "~13.2.5",
+    "@angular-devkit/build-angular": "~13.2.6",
+    "@angular/cli": "~13.2.6",
+    "@angular/compiler-cli": "~13.2.6",
     "@types/jasmine": "~3.10.3",
     "@types/node": "^17.0.21",
     "jasmine-core": "~4.0.1",
     "karma": "~6.3.17",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "~1.7.0",
