add use-case: average token holding time

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "asynciterable",
         "Bigmap",
         "bigmaps",
+        "bignumber",
         "Ciphertext",
         "ciphertexts",
         "devkit",
