--- a/package.json
+++ b/package.json
@@ -10,38 +10,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.1",
-    "@angular/cdk": "^13.3.2",
-    "@angular/common": "~13.3.1",
-    "@angular/compiler": "~13.3.1",
-    "@angular/core": "~13.3.1",
-    "@angular/forms": "~13.3.1",
-    "@angular/material": "^13.3.2",
-    "@angular/platform-browser": "~13.3.1",
-    "@angular/platform-browser-dynamic": "~13.3.1",
-    "@angular/router": "~13.3.1",
-    "@apollo/client": "^3.5.10",
-    "@taquito/michelson-encoder": "^12.0.0",
-    "apollo-angular": "^3.0.0",
-    "graphql": "^16.3.0",
+    "@angular/animations": "~13.3.8",
+    "@angular/cdk": "^13.3.7",
+    "@angular/common": "~13.3.8",
+    "@angular/compiler": "~13.3.8",
+    "@angular/core": "~13.3.8",
+    "@angular/forms": "~13.3.8",
+    "@angular/material": "^13.3.7",
+    "@angular/platform-browser": "~13.3.8",
+    "@angular/platform-browser-dynamic": "~13.3.8",
+    "@angular/router": "~13.3.8",
+    "@apollo/client": "^3.6.4",
+    "apollo-angular": "^3.0.1",
+    "bignumber.js": "^9.0.2",
+    "graphql": "^16.5.0",
     "rxjs": "~7.5.5",
     "stream-browserify": "^3.0.0",
     "subscriptions-transport-ws": "^0.11.0",
-    "tslib": "^2.3.1",
+    "tslib": "^2.4.0",
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.1",
-    "@angular/cli": "~13.3.1",
-    "@angular/compiler-cli": "~13.3.1",
-    "@types/jasmine": "~4.0.2",
-    "@types/node": "^17.0.23",
-    "jasmine-core": "~4.0.1",
-    "karma": "~6.3.17",
+    "@angular-devkit/build-angular": "~13.3.5",
+    "@angular/cli": "~13.3.5",
+    "@angular/compiler-cli": "~13.3.8",
+    "@types/jasmine": "~4.0.3",
+    "@types/node": "^17.0.34",
+    "jasmine-core": "~4.1.1",
+    "karma": "~6.3.20",
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~4.0.2",
+    "karma-jasmine": "~5.0.1",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.3"
+    "typescript": "~4.6.4"
   }
 }
